# bert_token_classifier_wnut

./: .gitignore  Dockerfile  README.md  pyproject.toml
src/: __main__  app.py  settings.py  train.py
src/model/: bert.py  model_utils.py  text_utils.py
src/utils/: utils.py
src/utils/resources/: conda-env.json
