
[tool.poetry]
name = "bert_ner_var"
version = "0.1.0"
description = ""
authors = ["Martin Højland <molheh@nuuday.dk>"]

[tool.poetry.dependencies]
python = "^3.8"
transformers = "^4.3.3"
spacy = "^3.0.5"
torch = "^1.7.1"
boto3 = "^1.17.17"
captum = "^0.3.1"
shap = "^0.35.0"
mlflow = "^1.13.1"
optuna = "^2.6.0"
pandas = "^1.1.4"
numpy = "^1.19.4"
pydantic = "^1.7.2"
python-dotenv = "^0.15.0"

[tool.poetry.dev-dependencies]
black = {version = "^20.8b1", allow-prereleases = true}
ipykernel = "^5.3.4"
lifelines = "^0.25.9"
jupyterlab = "^2.2.9"
mypy = "^0.770"
isort = "^4.3.21"
autoflake = "^1.3.1"
flake8 = "^3.7.9"
pytest-black = "^0.3.10"
pytest-clarity = "^0.3.0-alpha.0"
pytest-mock = "^3.3.1"
pytest-cov = "^2.11.1"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--cov --cov-report=xml:cov.xml --black"

[tool.black]
line-length = 135
target-version = ['py38']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs         # exclude a few common directories in the
  | \.git          # root of the project
  | \.mypy_cache
  | \.venv
  | \.vscode
  | _build
  | buck-out
  | build
  | dist
  | tmp
)/
'''